backstage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backstage
  labels:
    app: demo-backstage
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http-backend
      port: 7007
      targetPort: backend
      protocol: TCP
  selector:
    app: demo-backstage
